[package]
name = "glao_error_budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde-generate = "0.20.6"
serde-reflection = "0.3.5"
thiserror = "1.0.30"
