[package]
name = "glao_error_budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
npyz = "0.6.1"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde-generate = { version = "0.20.6", optional = true }
serde-reflection = { version = "0.3.5", optional = true }
thiserror = "1.0.30"
zip = "0.5.13"

[dev-dependencies]
anyhow = "1.0.56"
complot = "0.3.2"

[features]
python = [ "serde-generate", "serde-reflection" ]

[[bin]]
name = "gerpy"
required-features = [ "python" ]
